const_typed_builder_test/compile_fail/group_1.stderr
warning: unused variable: `foo`
  --> ./compile_fail/group_1.rs:11:9
   |
11 |     let foo = Foo::builder().bar("Hello world!".to_string()).build();
   |         ^^^ help: if this is intentional, prefix it with an underscore: `_foo`
   |
   = note: `#[warn(unused_variables)]` on by default

error[E0080]: evaluation of `main::FooBuilder::<true>::GROUP_VERIFIER` failed
 --> ./compile_fail/group_1.rs:5:45
  |
5 |     #[derive(Debug, Default, PartialEq, Eq, Builder)]
  |                                             ^^^^^^^ the evaluated program panicked at '`.build()` failed because the bounds of group `baz` where not met (at_least 2)', $DIR/./compile_fail/group_1.rs:5:45
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `panic` (in Nightly builds, run with -Z macro-backtrace for more info)

note: the above error was encountered while instantiating `fn main::FooBuilder::<true>::build`
  --> ./compile_fail/group_1.rs:11:15
   |
11 |     let foo = Foo::builder().bar("Hello world!".to_string()).build();
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
